# paystack-mcp-py

./: .gitignore  DEPLOYMENT.md  README.md  example.env  pyproject.toml
examples/: javascript-client.js  package.json  vercel-ai-sdk-integration.js
paystack_mcp/: __init__.py  client.py  config.py  models.py  server.py
tests/: test_server.py
